raise-error/quine
  File "quine", line 1
    File "quine", line 1
    ^
IndentationError: unexpected indent
